k8s/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: gmforge
spec:
  selector:
    matchLabels:
      app: mysql
      env: gmforge
  serviceName: mysql-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
        env: gmforge
    spec:
      serviceAccountName: mysql-sa
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: gmforge-storage
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: gmforge
spec:
  selector:
    app: mysql
    env: gmforge
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
